<resources>
    <string name="app_name">Neki</string>
    <string name="logo_picture">Logo Picture</string>
    <string name="please_enter_email_id_and_password_to_register_login">Please Enter Email ID and Password to Register/Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="register_login">Register/Login</string>
    <string name="you_are_a_first_time_user_please_fill_up_the_following_details">You are a First Time User. Please Fill Up the Following Details.</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="donate">Donate</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">save changes</string>
    <string name="various_categories">Various Categories</string>
    <string name="few_suggestions">Few Suggestions</string>
    <string name="ngo_icon">NGO Icon</string>
    <string name="welcome">Welcome</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="showing_ngos_who_deal_with_clothing">Showing NGOs who deal with Clothing</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone">Phone No.</string>
    <string name="please_fill_the_desciption_and_upload_pictures_of_the_items">Please Fill the Description and Upload Pictures of the Items.</string>
    <string name="what_are_you_donating_n_enter_quantity_as_well_complete_description">What are you Donating? \n (Enter Quantity as well Complete Description)</string>
    <string name="place_request">Place Request</string>
    <string name="edit_your_information">Edit Your Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_donations">Your Donations</string>
    <string name="to">To:</string>
    <string name="date">Date:</string>
    <string name="what_you_have_donated">What You Have Donated?</string>
    <string name="list_is_empty_please_make_some_donation">List is Empty, Please make some donation!</string>
    <string name="please_edit_your_information_accordingly">Please Edit Your Information Accordingly!</string>
    <string name="search_here">Search Here</string>
</resources>