<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llToDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/llTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.64">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/to"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    tools:text="@string/street_address" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.36">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/date"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    tools:text="Sep 20,2020" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llToDate"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/what_you_have_donated"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                tools:text="@string/street_address" />
        </LinearLayout>
    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>